--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="cz.vmoste.robonav"
-      android:versionCode="192" 
-      android:versionName="1.9.2">
+      android:versionCode="193" 
+      android:versionName="1.9.3">
 
     <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="10" />
     
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!--  uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" / -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />    
     
     <uses-feature android:name="android.hardware.camera" android:required="false"/>
