--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="cz.vmoste.robonav"
-      android:versionCode="193" 
-      android:versionName="1.9.3">
+      android:versionCode="194" 
+      android:versionName="1.9.4">
 
     <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="10" />
     
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <!--  uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" / -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />    
     
     <uses-feature android:name="android.hardware.camera" android:required="false"/>
@@ -51,5 +51,6 @@
                   android:theme="@android:style/Theme.Dialog"
                   android:configChanges="orientation|keyboardHidden" />
         <activity android:name="cz.vmoste.robonav.TermPreferences"/>
+        <!--   -->meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" / -->
     </application>
 </manifest>
