--- a/project.properties
+++ b/project.properties
@@ -10,4 +10,4 @@
 # Project target. 
 target=android-10
 android.library=false
-android.library.reference.1=../../OpenCV-2.4.9-android-sdk/sdk/java
+android.library.reference.1=..\\..\\OpenCV-2.4.9-android-sdk\\sdk\\java
