--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="cz.vmoste.robonav"
-      android:versionCode="198" 
-      android:versionName="1.9.8">
+      android:versionCode="199" 
+      android:versionName="1.9.9">
 
     <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="10" />
     
@@ -26,7 +26,7 @@
                       android:anyDensity="true" />
 
     <application 
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/icon" 
         android:label="@string/app_name">
         <activity android:name="cz.vmoste.robonav.MainActivity"
