--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="cz.vmoste.robonav"
-      android:versionCode="202"
-      android:versionName="2.0.2">
+    package="cz.vmoste.robonav"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:versionCode="301"
+    android:versionName="3.0.1">
 
-    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="10" />
-    
+    <uses-sdk
+        android:targetSdkVersion="10" tools:overrideLibrary="org.opencv" />
+
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -50,7 +52,6 @@
                   android:label="@string/select_device"
                   android:theme="@android:style/Theme.Dialog"
                   android:configChanges="orientation|keyboardHidden" />
-        <activity android:name="cz.vmoste.robonav.TermPreferences"/>
-        <!--   -->meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" / -->
+        <activity android:name="cz.vmoste.robonav.TermPreferences" />
     </application>
 </manifest>
