--- a/local.properties
+++ b/local.properties
@@ -2,6 +2,8 @@
 # as it contains information specific to your local configuration.
 #
 # Location of the SDK. This is only used by Gradle.
-#
-#Sun Feb 11 15:09:43 CET 2018
+# For customization when using a Version Control System, please read the
+# header note.
+#Thu Jan 09 20:33:13 CET 2020
+ndk.dir=C\:\\Users\\AH\\AppData\\Local\\Android\\Sdk\\ndk-bundle
 sdk.dir=C\:\\Users\\AH\\AppData\\Local\\Android\\Sdk
